--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     style="background-image: url('assets/img/hero.png');"
   >
     <nav>
-      <div class="logo">OrbitalNav</div>
+      <div class="logo">ISAM</div>
       <ul class="nav-links">
         <li><a href="#what">What&nbsp;we&nbsp;do</a></li>
         <li><a href="#values">Design&nbsp;Values</a></li>
