--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
     </section>
   </main>
   <footer>
+    <p> This work has been supported by the SmartSat CRC, whose activities are funded by the Australian Government’s CRC Program.</p>
     <p>&copy;&nbsp;2025&nbsp;Minduli W. All rights reserved.</p>
   </footer>
   <!-- Main script -->
