--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
     <div class="team-member"><img src="assets/img/team1.png" alt="Jay Zhou" /><h4>Jay&nbsp;Zhou</h4></div>
   </div>
 
-  <h3>Industry Partner Representatives</h3>
+  <h3>Funding and Industry Partner Representatives</h3>
   <div class="team-grid">
+     <div class="team-member"><img src="assets/people/andrewb.jpeg" alt="Andrew Barton" /><h4>Andrew&nbsp;Barton</h4><p>SmartSat CRC</p></div>
     <div class="team-member"><img src="assets/people/lakshika.jpeg" alt="Lashika Medagoda" /><h4>Lashika&nbsp;Medagoda</h4><p>Abyss Solutions</p></div>
     <div class="team-member"><img src="assets/people/mikhail.jpg" alt="Mikhail Asavkin" /><h4>Mikhail&nbsp;Asavkin</h4><p>ANT61</p></div>
     <div class="team-member"><img src="assets/people/Linh.jpeg" alt="Linh Trinh" /><h4>Linh&nbsp;Trinh</h4><p>ANT61</p></div>
