updated pic, module descriptions, and added Xiaofeng's email

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="card-icon"><i class="fa-solid fa-robot"></i></div>
         <h3>Mission Autonomy</h3>
         <p>
-          We develop autonomous systems for real-time, reliable, and safe close-proximity operations. Our work includes state estimation, guidance design, and intelligent planning for every phase of ISAM missions — from rendezvous to docking and undocking.
+          We create autonomous systems for safe, reliable close-proximity operations in ISAM missions, including state estimation, guidance, and planning from rendezvous to docking. Our robust algorithms, which include Q-law, convex tracking, and model predictive control, enable safe mission execution under real-world constraints
         </p>
       </div>
       <div class="card">
@@ -64,17 +64,17 @@
         </p>
       </div>
       <div class="card">
-        <div class="card-icon"><i class="fa-solid fa-compass-drafting"></i></div>
-        <h3>Guidance and Control</h3>
-        <p>
-          We design robust and safe guidance and control algorithms, including Q-law, convex-based tracking, and model predictive control, to ensure safe servicing trajectories under realistic operational constraints like plume impingement.
-        </p>
-      </div>
-      <div class="card">
         <div class="card-icon"><i class="fa-solid fa-brain"></i></div>
         <h3>Perception</h3>
         <p>
-          We use machine learning and computer vision techniques for satellite detection, feature extraction, and mid-range tracking using orbital motion models. The perception stack supports autonomy in uncooperative and uncertain conditions.
+          We use machine learning and computer vision techniques for satellite detection, feature extraction, and tracking using orbital motion models. The perception stack supports autonomy in uncooperative and uncertain conditions.
+        </p>
+      </div>
+      <div class="card">
+        <div class="card-icon"><i class="fa-solid fa-compass-drafting"></i></div>
+        <h3>Robust Robotic Control</h3>
+        <p>
+          We use intelligent planning and control algorithms to dock with and service satellites. Our methods reduce disturbances on the spacecraft base and ensure constraints are met for safe operation.
         </p>
       </div>
     </div>
@@ -262,7 +262,7 @@
         <li>Nathan&nbsp;Wallace – Research Fellow, Agriculture &amp; Environment Group, ACFR, University of Sydney</li>
           <li>Minduli&nbsp;Wijayatunga – Adjunct Assistant Professor, Aerospace Engineering, University of Illinois, Urbana-Champaign</li>
         <li>Julian&nbsp;Guinane – Space Systems Engineer, School of Aerospace, Mechanical and Mechatronic Engineering, University of Sydney</li>
-        <li>Donald&nbsp;Dansereau – Senior Lecturer, School of Aerospace, Mechanical and Mechatronic Engineering, University of Sydney</li>
+        <li>Donald&nbsp;G.&nbsp;Dansereau – Senior Lecturer, School of Aerospace, Mechanical and Mechatronic Engineering, University of Sydney</li>
         <li>Thierry&nbsp;Peynot – Associate Professor, Queensland University of Technology (QUT)</li>
         <li>Miguel&nbsp;Angel&nbsp;Olivares‑Mendez – Associate Professor, University of Luxembourg</li>
       </ul>
@@ -303,7 +303,7 @@
     <!-- Contact section -->
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email us at <a href="mailto:minduli@illinois.com">minduli@illinois.com</a></p>
+      <p>Email us at <a href="mailto:xiaofeng.wu@sydney.edu.au">xiaofeng.wu@sydney.edu.au</a> or <a href="mailto:minduli@illinois.com">minduli@illinois.com</a></p>
       <p>Sydney&nbsp;NSW, Australia</p>
     </section>
   </main>
