--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <!-- Contact section -->
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email us at <a href="mailto:xiaofeng.wu@sydney.edu.au">xiaofeng.wu@sydney.edu.au</a> or <a href="mailto:minduli@illinois.com">minduli@illinois.com</a></p>
+      <p>Email us at <a href="mailto:xiaofeng.wu@sydney.edu.au">xiaofeng.wu@sydney.edu.au</a> or <a href="mailto:minduli@illinois.edu">minduli@illinois.edu</a></p>
       <p>Sydney&nbsp;NSW, Australia</p>
     </section>
   </main>
