--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div class="logo">ISAM@Usyd</div>
       <ul class="nav-links">
         <li><a href="#what">What&nbsp;We&nbsp;Do</a></li>
+        <li><a href="#demo">Demo</a></li>
         <li><a href="#values">Testbed&nbsp;Ecosystem</a></li>
         <li><a href="#team">Team</a></li>
         <li><a href="#iac">IAC&nbsp;2025</a></li>
@@ -79,6 +80,23 @@
       </div>
     </div>
   </section>
+
+<section id="demo">
+  <h2>Demonstrations</h2>
+  <div class="video-container">
+    <video width="640" height="360" controls>
+      <source src="assets/videos/locatedockingport.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <video width="640" height="360" controls>
+      <source src="assets/videos/changingapproachaxiswithstationarytime.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</section>
+
+
+
 
   <section id="values">
     <h2>Testbed Ecosystem</h2>
